change new ways to display

--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
     <h1>FoleySpace: Vision-Aligned Binaural Spatial Audio Generation</h1>
     <a href="#" class="code-link" target="_blank">GitHub Code</a>
 
-    <div id="video-grid"></div>
+    <div class="video-row">
+      <div class="video-item">
+        <video src="demo_all/MMAudio/1.mp4" controls></video>
+        <div class="video-label">MMAudio</div>
+      </div>
+      <div class="video-item">
+        <video src="demo_all/See2Sound/1.mp4" controls></video>
+        <div class="video-label">See2Sound</div>
+      </div>
+      <div class="video-item">
+        <video src="demo_all/ThinkSound/1.mp4" controls></video>
+        <div class="video-label">ThinkSound</div>
+      </div>
+      <div class="video-item">
+        <video src="demo_all/FoleySpace/1.mp4" controls></video>
+        <div class="video-label">Ours</div>
+      </div>
+    </div>
+    <hr>
   </div>
 
   <script src="script.js"></script>
