--- a/index.html
+++ b/index.html
@@ -77,20 +77,21 @@
         <button id="backBtn" class="btn secondary">上一个</button>
       </div>
       <div id="criteria-desc" class="criteria-desc">
-        <strong>🎧 音频质量（Audio Quality）：</strong>
-        衡量生成音频本身的听感，包括清晰度、自然度、噪声等。
+        <strong>❤️ Perceived Spatiality Score (PSS)：</strong>
+        Evaluates the extent to which listeners perceive spatial characteristics in an audio sample. It reflects listeners’ sense of spatial separation, directionality, depth, and immersive quality of the sound field.
         <br>
-        <strong>🧭 空间一致性（Spatial Consistency）：</strong>
-        衡量音频的空间定位是否与视频中声源位置匹配（如方向、远近、环境感）。
+        <strong>🧭 Spatial Alignment (SA)：</strong>
+        Assesses whether the spatial cues in the audio—such as the direction and distance of the sound source—are consistent with the visual information in the video, providing a realistic sense of space.
         <br>
-        <strong>🧠 语义一致性（Semantic Consistency）：</strong>
-        衡量音频内容是否准确表达视频中的事件或动作语义（如敲门声、说话、狗叫）。
+        <strong>⏱️ Temporal Alignment (TA)：</strong>
+        Measures the synchronization between audio and video over time, ensuring that sounds occur at the correct moments and align well with visual actions.
         <br>
-        <strong>⏱️ 时间一致性（Temporal Consistency）：</strong>
-        衡量音频事件在时间上是否与视频同步，动作与声音是否协调。
+        <strong>🧠 Semantic Consistency (SC)：</strong>
+        Evaluates how well the audio content matches the video semantically, for example, whether the type of sound is appropriate and accurately reflects the events or actions shown.
         <br>
-        <strong>❤️ 感知空间感得分（PSS）：</strong>
-        用于评估听众在音频样本中感知到空间特性的程度。它反映了听众对声场中空间分离感、方向感、深度感以及沉浸感的感受。
+        <strong>🎧 Audio Quality (AQ)：</strong>
+        Evaluates the clarity, naturalness, and any noise or distortion in the audio alone, without considering the video content.
+        <br>
       </div>
       <div class="row">
         <div class="video-wrap">
